--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="title_activity_add_attribute">AddAttributeActivity</string>
     <string name="title_activity_device_settings">DeviceSettings</string>
     <string name="title_activity_new_password">NewPassword</string>
-    <string name="app_name">FitnessJournal</string>
+    <string name="app_name">Fitness</string>
     <string name="action_settings">Settings</string>
 </resources>
